--- a/styles.css
+++ b/styles.css
@@ -3,54 +3,52 @@
 *,
 *::after,
 *::before {
-  box-sizing: border-box;
-  font-family: 'Sora', sans-serif;
-  font-size: 24px;
+	box-sizing: border-box;
+	font-family: 'Sora', sans-serif;
+	font-size: 24px;
 }
 
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
+body {
+	margin: 0;
 }
 
-#attempts {
-  margin-top: 6.25rem;
+div.container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+header {
+	text-align: center;
+	padding: 20px;
 }
 
 .form {
-  display: flex;
-  gap: 20px;
-  align-items: center;
+	display: flex;
+	gap: 20px;
+	align-items: center;
+	justify-content: center;
+}
+
+label {
+	align-self: flex-end;
 }
 
 .form > input {
-  max-width: 150px;
-}
-
-.button {
-  padding: 0.5em;
-}
-
-.button:hover {
-  cursor: pointer;
+	max-width: 150px;
 }
 
 .list {
-  list-style: none;
-  display: flex;
-  gap: 0.625rem;
-  justify-content: center;
+	list-style: none;
+	display: flex;
+	gap: 0.625rem;
+	justify-content: center;
 }
 
 li {
-  display: flex;
-  flex-direction: column;
-  min-width: 1.25rem;
+	min-width: 1.25rem;
 }
 
 .hide {
-  display: none;
+	display: none;
 }
