--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,20 @@ li {
 	min-width: 1.25rem;
 }
 
+p {
+	height: 2.5rem;
+}
+
+.winner {
+	font-size: 1.5rem;
+	color: #198754;
+	min-height: 2.5rem;
+}
+
+.loser {
+	color: #6c757d;
+}
+
 .hide {
 	display: none;
 }
